--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img 
+    src="https://img.redbull.com/images/c_limit,w_1500,h_1000,f_auto,q_auto/redbullcom/2015/03/03/1331709128868_2/bloodborne"
+    />
+    <img
+    src="https://i.pcmag.com/imagery/reviews/05isLvYQj5GS0EuxqHnsSfW-3..v1569482291.jpg" 
+    alt="Dark Souls 3 gameplay screenshot"
+    />
+    <img
+    src="https://assets.reedpopcdn.com/elden-ring-bosses-in-order-main-mandatory-8042-1647011924713.jpg/BROK/resize/1200x1200>/format/jpg/quality/70/elden-ring-bosses-in-order-main-mandatory-8042-1647011924713.jpg"
+    alt="Elden Ring gameplay screenshot"
+    title="Elden Ring"
+    />
+
   </body>
 </html>
